<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/back" />

            <TextView
                android:id="@+id/newrecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/newrecond"
                android:textSize="20sp" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/save" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:text="@string/range"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/inputrange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_record_edittext"
                android:cursorVisible="true"
                android:gravity="right"
                android:maxLength="15"
                android:hint="@string/rangehint"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/totalprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:text="@string/totalprice"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/inputtotalprice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_record_edittext"
                android:cursorVisible="true"
                android:gravity="right"
                android:maxLength="15"
                android:hint="@string/inputtotalprice"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/unitprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="24dp"
                android:text="@string/unitprice"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/inputunitprice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_record_edittext"
                android:cursorVisible="true"
                android:gravity="right"
                android:maxLength="15"
                android:hint="@string/inputunitprice"
                android:inputType="numberDecimal"
                android:textSize="18sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/disamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@drawable/bg_record_disamount_edittext"
                android:editable="false"
                android:focusable="false"
                android:text="@string/disamount"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_record_date_edittext"
                android:editable="false"
                android:gravity="right"
                android:hint="@string/date"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/isempty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:text="@string/isempty" >
            </CheckBox>

            <CheckBox
                android:id="@+id/isfull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:text="@string/isfull" >
            </CheckBox>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="备注"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_remark"
            android:cursorVisible="true"
            android:gravity="start"
            android:hint="@string/remark"
            android:inputType="text"
            android:textSize="15sp" />
    </LinearLayout>

    <com.fuel_consumption.widget.DateTimePicker
        android:id="@+id/datetimepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:visibility="gone" >
    </com.fuel_consumption.widget.DateTimePicker>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:focusable="true"
        android:focusableInTouchMode="true">
    </android.inputmethodservice.KeyboardView>

</FrameLayout>